@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Dec 22 15:41:26 CET 2005
+// Thu Jan 26 11:25:59 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -79,9 +79,6 @@ namespace Mono.Cecil {
 		{
 			if (value == null)
 				throw new ArgumentNullException ("value");
-
-			if (this.Contains (value))
-				throw new ArgumentException ("Duplicated value");
 
 			if (OnExternTypeAdded != null)
 				OnExternTypeAdded (this, new ExternTypeEventArgs (value));
